[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "llama-cpp-python>=0.3.6",
    "pgpy>=0.6.0",
    "sentence-transformers>=3.3.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.47.1",
]
